
Package: R.utils
================

Version: 1.30.7 [2014-04-26]
o Added argument 'xtrim' to draw() for density object.
o CLEANUP: Dropping '::' in calls where possible.


Version: 1.30.6 [2014-04-24]
o Added argument 'newline' to evalCapture().


Version: 1.30.5 [2014-04-22]
o Added argument 'substitute' to evalCapture() for substituting
  symbols "on the fly" in the expression before it is evaluated.


Version: 1.30.4 [2014-04-18]
o Added argument 'modifiedOnly' to sourceDirectory(), which was
  previously passed via '...' to sourceTo(), and it now defaults
  to TRUE.


Version: 1.30.3 [2014-04-15]
o BUG FIX: use() would not install package dependencies.


Version: 1.30.2 [2014-04-08]
o Added argument 'max.deparse.length' to evalCapture().


Version: 1.30.1 [2014-04-06]
o Now evalCapture() utilizes deparse() to get the source code and
  acknowledges options 'deparse.cutoff' to control the code wrapping.
  Previously capture.output(print()) was used.
o WORKAROUND: moveInSearchPath() redirects any messages that
  base::attach() (incorrectly?) sends to stdout to stderr.


Version: 1.30.0 [2014-04-06]
o Vectorized detachPackage(), getAbsolutePath(), getRelativePath(),
  isAbsolutePath(), isDirectory(), isFile(), isOpen(),
  isPackageInstalled(), touchFile() and toUrl(). Added package system
  tests for several of them.  For backward compatibility,
  getAbsolutePath(), getRelativePath(), isAbsolutePath(), isFile() and
  isDirectory() treats an empty vector of path/pathnames equal to ".".
  However, in a future version, empty results will returned by these too.
o BUG FIX: toCamelCase(character(0L)) gave an error.


Version: 1.29.11 [2014-04-02]
o BUG FIX: str() and summary() for Verbose did not acknowledge
  argument 'level'.


Version: 1.29.10 [2014-02-28]
o DOCUMENTATION: Added a help section on privileges required on Windows
  in order for createLink() to work.


Version: 1.29.9 [2014-02-24]
o ROBUSTNESS: Added a package redundancy test for a bug occurring in